--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -126,4 +126,6 @@ dust has not yet formed or where dust is destroyed and returned to the gas phase
 to do some disk research; there must be a dust sublimation zone at the surfaces
 of disks in addition to the radial one.}
 
+\input{solobib}
+
 \end{document}
