more text, updated bib, etc

--- a/extracted.bib
+++ b/extracted.bib
@@ -1,1 +1,225 @@
 
+
+@article{Cernicharo1987a,
+  author =        {{Cernicharo}, J. and {Guelin}, M.},
+  journal =       {\aap},
+  month =         sep,
+  pages =         {L10-L12},
+  title =         {{Metals in IRC+10216 - Detection of NaCl, AlCl, and
+                   KCl, and tentative detection of AlF}},
+  volume =        {183},
+  year =          {1987},
+  abstract =      {The authors report the first detection of metal
+                   halides in IRC +10216. The millimetre-wave line
+                   profiles suggest that these species are concentrated
+                   in the inner circumstellar envelope. The abundances
+                   derived for NaCl, AlCl, KCl, and tentatively for AlF,
+                   are in the range 1012 - 1014cm-2 and are 106 -
+                   108times lower than the abundance of H2. They agree
+                   with the chemical equilibrium abundances calculated
+                   by Tsuji (1973) for a carbon-rich stellar atmosphere
+                   with a temperature 1200 - 1500K. The lines of NaCl
+                   and AlCl, observed with the IRAM 30m telescope, are
+                   strong enough to allow the detection of these
+                   species' rare 37Cl isotopes. The derived 35Cl/37Cl
+                   isotopic ratio (2.3$\pm$0.5) is consistent with the
+                   terrestrial elemental isotopic ratio.},
+}
+
+@article{Ginsburg2018a,
+  author =        {{Ginsburg}, A. and {Bally}, J. and {Barnes}, A. and
+                   {Bastian}, N. and {Battersby}, C. and {Beuther}, H. and
+                   {Brogan}, C. and {Contreras}, Y. and {Corby}, J. and
+                   {Darling}, J. and {De Pree}, C. and
+                   {Galv{\'a}n-Madrid}, R. and {Garay}, G. and
+                   {Henshaw}, J. and {Hunter}, T. and
+                   {Kruijssen}, J.~M.~D. and {Longmore}, S. and {Lu}, X. and
+                   {Meng}, F. and {Mills}, E.~A.~C. and {Ott}, J. and
+                   {Pineda}, J.~E. and {S{\'a}nchez-Monge}, {\'A}. and
+                   {Schilke}, P. and {Schmiedeke}, A. and {Walker}, D. and
+                   {Wilner}, D.},
+  journal =       {\apj},
+  month =         feb,
+  pages =         {171},
+  title =         {{Distributed Star Formation throughout the Galactic
+                   Center Cloud Sgr B2}},
+  volume =        {853},
+  year =          {2018},
+  abstract =      {We report ALMA observations with resolution ≈0."5
+                   at 3 mm of the extended Sgr B2 cloud in the Central
+                   Molecular Zone (CMZ). We detect 271 compact sources,
+                   most of which are smaller than 5000 au. By ruling out
+                   alternative possibilities, we conclude that these
+                   sources consist of a mix of hypercompact H II regions
+                   and young stellar objects (YSOs). Most of the newly
+                   detected sources are YSOs with gas envelopes that,
+                   based on their luminosities, must contain objects
+                   with stellar masses {M}* ≳ 8 {M}o . Their spatial
+                   distribution spread over a ~12 × 3 pc region
+                   demonstrates that Sgr B2 is experiencing an extended
+                   star formation event, not just an isolated
+                   ``starburst'' within the protocluster regions. Using
+                   this new sample, we examine star formation thresholds
+                   and surface density relations in Sgr B2. While all of
+                   the YSOs reside in regions of high column density
+                   (N({{{H}}}2)≳ 2× {10}23 {{cm}}-2), not all regions
+                   of high column density contain YSOs. The observed
+                   column density threshold for star formation is
+                   substantially higher than that in solar vicinity
+                   clouds, implying either that high-mass star formation
+                   requires a higher column density or that any star
+                   formation threshold in the CMZ must be higher than in
+                   nearby clouds. The relation between the surface
+                   density of gas and stars is incompatible with
+                   extrapolations from local clouds, and instead stellar
+                   densities in Sgr B2 follow a linear {{{Sigma }}}*
+                   {--}{{{Sigma }}}{gas} relation, shallower than that
+                   observed in local clouds. Together, these points
+                   suggest that a higher volume density threshold is
+                   required to explain star formation in CMZ clouds.},
+  doi =           {10.3847/1538-4357/aaa6d4},
+  eid =           {171},
+}
+
+@article{Kaplan2017a,
+  author =        {{Kaplan}, K.~F. and {Dinerstein}, H.~L. and {Oh}, H. and
+                   {Mace}, G.~N. and {Kim}, H. and {Sokal}, K.~R. and
+                   {Pavel}, M.~D. and {Lee}, S. and {Pak}, S. and
+                   {Park}, C. and {Sok Oh}, J. and {Jaffe}, D.~T.},
+  journal =       {\apj},
+  month =         apr,
+  pages =         {152},
+  title =         {{Excitation of Molecular Hydrogen in the Orion Bar
+                   Photodissociation Region from a Deep Near-infrared
+                   IGRINS Spectrum}},
+  volume =        {838},
+  year =          {2017},
+  abstract =      {We present a deep near-infrared spectrum of the Orion
+                   Bar Photodissociation Region (PDR) taken with the
+                   Immersion Grating INfrared Spectrometer (IGRINS) on
+                   the 2.7 m telescope at the McDonald Observatory.
+                   IGRINS has high spectral resolution (R˜ {{45,000}})
+                   and instantaneous broad wavelength coverage
+                   (1.45-2.45 mum), enabling us to detect 87 emission
+                   lines from rovibrationally excited molecular hydrogen
+                   (H2) that arise from transitions out of 69 upper
+                   rovibration levels of the electronic ground state.
+                   These levels cover a large range of rotational and
+                   vibrational quantum numbers and excitation energies,
+                   making them excellent probes of the excitation
+                   mechanisms of H2 and physical conditions within the
+                   PDR. The Orion Bar PDR is thought to consist of
+                   cooler high density clumps or filaments (T=50{--}250
+                   K, {n}H={10}5{--}{10}7 cm-3) embedded in a warmer
+                   lower density medium (T=250{--}1000 K,
+                   {n}H={10}4{--}{10}5 cm-3). We fit a grid of constant
+                   temperature and density Cloudy models, which recreate
+                   the observed H2 level populations well, to constrain
+                   the temperature to a range of 600-650 K and the
+                   density to {n}H=2.5× {10}3{--}{10}4 cm-3. The
+                   best-fit model gives T = 625 K and {n}H=5× {10}3
+                   cm-3. This well-constrained warm temperature is
+                   consistent with kinetic temperatures found by other
+                   studies for the Orion Bar's lower density medium.
+                   However, the range of densities well fit by the model
+                   grid is marginally lower than those reported by other
+                   studies. We could be observing lower density gas than
+                   the surrounding medium, or perhaps a
+                   density-sensitive parameter in our models is not
+                   properly estimated.},
+  doi =           {10.3847/1538-4357/aa5b9f},
+  eid =           {152},
+}
+
+@article{Highberger2003a,
+  author =        {{Highberger}, J.~L. and {Thomson}, K.~J. and
+                   {Young}, P.~A. and {Arnett}, D. and {Ziurys}, L.~M.},
+  journal =       {\apj},
+  month =         aug,
+  pages =         {393-401},
+  title =         {{The Salty Scrambled Egg: Detection of NaCl Toward
+                   CRL 2688}},
+  volume =        {593},
+  year =          {2003},
+  abstract =      {NaCl has been detected toward the circumstellar
+                   envelope of the post-AGB star CRL 2688 using the IRAM
+                   30 m telescope, the first time this molecule has been
+                   identified in a source other than IRC +10216. The
+                   J=7-->6, 11-->10, 12-->11, and 18-->17 transitions of
+                   NaCl at 1, 2, and 3 mm have been observed, as well as
+                   the J=8-->7 line of the 37Cl isotopomer. The
+                   J=12-->11 line was also measured at the ARO 12 m
+                   telescope. An unsuccessful search was additionally
+                   conducted for AlCl toward CRL 2688, although in the
+                   process new transitions of NaCN were observed. Both
+                   NaCl and NaCN were found to be present in the AGB
+                   remnant wind, as suggested by their U-shaped line
+                   profiles, indicative of emission arising from an
+                   optically thin, extended shell-like source of radius
+                   ~10"-12". These data contrast with past results in
+                   IRC +10216, where the distribution of both molecules
+                   is confined to within a few arcseconds of the star. A
+                   high degree of excitation is required for the
+                   transitions observed for NaCl and NaCN; therefore,
+                   these two species likely arise in the region where
+                   the high-velocity outflow has collided with the
+                   remnant wind. Here the effects of shocks and clumping
+                   due to Rayleigh-Taylor instabilities have raised the
+                   densities and temperatures significantly. The shell
+                   source is thus likely to be clumpy and irregular. The
+                   chemistry producing the sodium compounds is
+                   consequently more complex than simple LTE formation.
+                   Abundances of NaCl and NaCN, relative to H2, are
+                   f~1.6×10-10 and ~5.2×10-9, respectively, while the
+                   upper limit to AlCl is f<2×10-9. These values differ
+                   substantially from those in IRC +10216, where AlCl
+                   has an abundance near 10-7. The NaCl observations
+                   additionally indicate a chlorine isotope ratio of
+                   35Cl/37Cl=2.1+/-0.8 in CRL 2688, suggestive of
+                   s-process enhancement of chlorine 37.},
+  doi =           {10.1086/376446},
+}
+
+@article{Milam2007a,
+  author =        {{Milam}, S.~N. and {Apponi}, A.~J. and {Woolf}, N.~J. and
+                   {Ziurys}, L.~M.},
+  journal =       {\apjl},
+  month =         oct,
+  pages =         {L131-L134},
+  title =         {{Oxygen-rich Mass Loss with a Pinch of Salt: NaCl in
+                   the Circumstellar Gas of IK Tauri and VY Canis
+                   Majoris}},
+  volume =        {668},
+  year =          {2007},
+  abstract =      {The NaCl molecule has been observed in the
+                   circumstellar envelopes of VY Canis Majoris (VY CMa)
+                   and IK Tauri (IK Tau)-the first identifications of a
+                   metal refractory in oxygen-rich shells of evolved
+                   stars. Five rotational transitions of NaCl at 1 and 2
+                   mm were detected toward VY CMa and three 1 mm lines
+                   were observed toward IK Tau, using the telescopes of
+                   the Arizona Radio Observatory. In both objects, the
+                   line widths of the NaCl profiles were extremely
+                   narrow relative to those of other molecules,
+                   indicating that sodium chloride has not reached the
+                   terminal outflow velocity in either star, likely a
+                   result of early condensation onto grains. Modeling
+                   the observed spectra suggests abundances, relative to
+                   H2, of f~5×10-9 in VY CMa and f~4×10-9 in IK Tau,
+                   with source sizes of 0.5" and 0.3", respectively. The
+                   extent of these sources is consistent with the size
+                   of the dust acceleration zones in both stars. NaCl
+                   therefore appears to be at least as abundant in
+                   O-rich shells as compared to C-rich envelopes, where
+                   f~(0.2-2)×10-9, although it appears to condense out
+                   earlier in the O-rich case. Chemical equilibrium
+                   calculations indicate that NaCl is the major carrier
+                   of sodium at T~1100 K for oxygen-rich stars, with
+                   predicted fractional abundances in good agreement
+                   with the observations. These measurements suggest
+                   that crystalline salt may be an important condensate
+                   for sodium in both C- and O-rich circumstellar
+                   shells.},
+  doi =           {10.1086/522928},
+}
+
