--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -108,8 +108,13 @@ all of which were moderately high-mass evolved stars blowing off their envelopes
 The known detections include the carbon star envelope IRC +10216 \citep{Cernicharo1987a},
 the post-AGB star envelope CRL 2688 \citep{Highberger2003a}, and the oxygen-rich
 evolved star envelopes of VY Canis Majoris and IK Tauri \citep{Milam2007a}.
+However, there were no detections of vibrationally excited NaCl or KCl in any
+of these sources \citep[][presented the most systematic study of salt
+lines, including only v=0 rotational transitions]{Agundez2012a}.
+
 In these evolved stars, v=0 rotational transitions of NaCl were observed
-with rotational temperatures $T_{rot}\sim70-100$ K.
+with rotational temperatures $T_{rot}\sim70-100$ K (IK Tau, VY CMa), inferred
+local temperatures of $\sim200$ K in shocks (CRL 2688), .
 % Carbon star envelope IRC +10216, d ~ 170 pc
 % CRL2688 post-AGB * \citep{Highberger2003a} ~ 1 kpc
 % IK Tauri, VY Canis Majoris \citep{Milam2007a}
@@ -119,7 +124,7 @@ of this phenomenon, assuming they are detected
 
 Sodium and potassium are rarely observed in the dense molecular interstellar medium.
 They are usually assumed to be rapidly incorporated into dust grains [cite?  Milam
-says this, but there's a better original source].  Since we clearly observe NaCl
+says this, but there's a better original source.  Lodders & Fegley 1999?].  Since we clearly observe NaCl
 and KCl in the atmosphere of the disk, it is clear that there is a zone where either
 dust has not yet formed or where dust is destroyed and returned to the gas phase.
 {\color{red} What can we say about the dust destruction/sublimation zone?  I need
