--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -124,7 +124,7 @@ of this phenomenon, assuming they are detected
 
 Sodium and potassium are rarely observed in the dense molecular interstellar medium.
 They are usually assumed to be rapidly incorporated into dust grains [cite?  Milam
-says this, but there's a better original source.  Lodders & Fegley 1999?].  Since we clearly observe NaCl
+says this, but there's a better original source.  Lodders \& Fegley 1999?].  Since we clearly observe NaCl
 and KCl in the atmosphere of the disk, it is clear that there is a zone where either
 dust has not yet formed or where dust is destroyed and returned to the gas phase.
 {\color{red} What can we say about the dust destruction/sublimation zone?  I need
