a little more text

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -48,26 +48,26 @@ features from the surrounding molecular cloud.
 Figures 1-3 shows the spectra with all lines labeled.
 
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B3_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B3_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B3_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B3_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw3_robust0.5.pdf}
 \caption{Stacked spectra  B3}
 \label{fig:spectrab3}
 \end{figure*}
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B6_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B6_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B6_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B6_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw3_robust0.5.pdf}
 \caption{Stacked spectra B6}
 \label{fig:spectrab6}
 \end{figure*}
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B7.lb_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B7.lb_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B7.lb_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=6in]{figures/lines_labeled_OrionSourceI_B7.lb_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw3_robust0.5.pdf}
 \caption{Stacked spectra B7}
 \label{fig:spectrab7}
 \end{figure*}
@@ -108,9 +108,13 @@ all of which were moderately high-mass evolved stars blowing off their envelopes
 The known detections include the carbon star envelope IRC +10216 \citep{Cernicharo1987a},
 the post-AGB star envelope CRL 2688 \citep{Highberger2003a}, and the oxygen-rich
 evolved star envelopes of VY Canis Majoris and IK Tauri \citep{Milam2007a}.
+\sourcei is only the 5th astronomical source in which KCl and NaCl have been
+detected.
 However, there were no detections of vibrationally excited NaCl or KCl in any
-of these sources \citep[][presented the most systematic study of salt
-lines, including only v=0 rotational transitions]{Agundez2012a}.
+of the previous observations \citep[][presented the most systematic study of salt
+lines, which only included detections of v=0 rotational transitions]{Agundez2012a},
+while \sourcei has clear detections at least up to v=6, likely up to v=8, in both
+NaCl and KCl.
 
 In these evolved stars, v=0 rotational transitions of NaCl were observed
 with rotational temperatures $T_{rot}\sim70-100$ K (IK Tau, VY CMa), inferred
