add excitation discussion

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -135,6 +135,29 @@ dust has not yet formed or where dust is destroyed and returned to the gas phase
 to do some disk research; there must be a dust sublimation zone at the surfaces
 of disks in addition to the radial one.}
 
+\subsection{Excitation}
+We detect highly excited transitions of NaCl and KCl, many with Einstein A coefficients
+in the range $\sim0.01-0.1$ s$^{-1}$.  These high excitation lines are unlikely
+to be excited by collisions, since the gas would have to be hot enough to excite
+molecules into states with $E_U > 2000$ K and would therefore likely be hot enough
+to dissociate the molecules [would be nice to back this up with numbers].  Alternately,
+at high densities and more moderate temperatures, the salts would likely be absorbed
+into dust grains.
+
+Within each vibrational state for which we have several transitions, we can measure
+a rotational temperature.  For the KCl v=0 state, in which we have detected 4 rotational
+transitions from $30 < E_U < 400$ K, the best fit rotational temperature is
+$T_{rot}\sim105$ K.  At such a low temperature, the populations of the vibrationally
+excited states should be effectively zero.  These observations combined suggest
+that there is a radiative mechanism exciting the vibrational states.
+
+A plausible scenario is that the hot radiation field from the central star,
+with $T_*\sim4000$ K \citep{Testi2010a}, excites molecules to high vibrational
+excitation states, from which they cascade through rovibrational transitions
+down to the v=0 state, providing a relatively uniform level population
+from $E_U=0$ to $E_U\approx T_*$ instead of a thermal level population.
+
+
 \input{solobib}
 
 \end{document}
