--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -39,6 +39,7 @@ In that appendix, we reported that ``there is no consistent pattern to the
 detected lines and no individual species can explain more than a few of the
 observed lines.''  This statement was incorrect, as there are obvious carriers
 for the majority of the unidentified lines that we had simply overlooked:
+{\color{red}The following needs to be updated; I found many more transitions:}
 NaCl (11 transitions in-band, 10 detections), Na$^{37}$Cl (8 transitions, 8
 detections), KCl (8 transitions, 8 detections), $^{41}$KCl (8 transitions, 4
 detections), and K$^{37}$Cl (7 transitions, 5 detections).
@@ -157,6 +158,12 @@ excitation states, from which they cascade through rovibrational transitions
 down to the v=0 state, providing a relatively uniform level population
 from $E_U=0$ to $E_U\approx T_*$ instead of a thermal level population.
 
+\input{NaCl_line_parameters.tex}
+\input{Na37Cl_line_parameters.tex}
+\input{KCl_line_parameters.tex}
+\input{K37Cl_line_parameters.tex}
+\input{41KCl_line_parameters.tex}
+\input{41K37Cl_line_parameters.tex}
 
 \input{solobib}
 
