--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -20,7 +20,7 @@
 \section{Introduction}
 Molecules consisting of alkali metals and halogens have been detected
 toward evolved stars including IRC +10216 \citep{Cernicharo1987a}, 
-
+{\color{red}Discussion of AGB*s is now in the discussion session.}
 
 \section{Observations}
 The observations presented here are described in \citet{Ginsburg2018a} as part
