--- a/extracted.bib
+++ b/extracted.bib
@@ -26,6 +26,41 @@
                    terrestrial elemental isotopic ratio.},
 }
 
+@article{Ginsburg2018b,
+  author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
+                   {Plambeck}, R. and {Wright}, M.},
+  journal =       {\apj},
+  month =         jun,
+  pages =         {119},
+  title =         {{A Keplerian Disk around Orion SrCI,
+                   a{\nbsp}{\sim}{\nbsp}15 M $_{&sun;}$ YSO}},
+  volume =        {860},
+  year =          {2018},
+  abstract =      {We report ALMA long-baseline observations of Orion
+                   Source I (SrcI), with a resolution 0."03--0."06
+                   (12--24 au) at 1.3 and 3.2 mm. We detect both
+                   continuum and spectral line emission from SrcI's
+                   disk. We also detect a central weakly resolved source
+                   that we interpret as a hot spot in the inner disk,
+                   which may indicate the presence of a binary system.
+                   The high angular resolution and sensitivity of these
+                   observations allows us to measure the outer envelope
+                   of the rotation curve of the H2O 55,0--64,3 line,
+                   which gives a mass M I ≈ 15 $\pm$ 2 {M}o . We
+                   detected several other lines that more closely trace
+                   the disk, but were unable to identify their parent
+                   species. Using centroid-of-channel methods on these
+                   other lines, we infer a similar mass. These
+                   measurements solidify SrcI as a genuine high-mass
+                   protostar system and support the theory that SrcI and
+                   the Becklin-Neugebauer Object were ejected from the
+                   dynamical decay of a multiple-star system ~500 years
+                   ago, an event that also launched the explosive
+                   molecular outflow in Orion.},
+  doi =           {10.3847/1538-4357/aac205},
+  eid =           {119},
+}
+
 @article{Ginsburg2018a,
   author =        {{Ginsburg}, A. and {Bally}, J. and {Barnes}, A. and
                    {Bastian}, N. and {Battersby}, C. and {Beuther}, H. and
@@ -286,5 +321,60 @@
                    available in electronic form at http://www.aanda.org},
   doi =           {10.1051/0004-6361/201218963},
   eid =           {A48},
+}
+
+@article{Testi2010a,
+  author =        {{Testi}, L. and {Tan}, J.~C. and {Palla}, F.},
+  journal =       {\aap},
+  month =         nov,
+  pages =         {A44},
+  title =         {{The near-infrared reflected spectrum of source I in
+                   Orion-KL}},
+  volume =        {522},
+  year =          {2010},
+  abstract =      {Context. Source I in the Orion-KL nebula is believed
+                   to be the nearest example of a massive star still in
+                   the main accretion phase. It is thus one of the best
+                   cases for studying the properties of massive
+                   protostars to constrain high-mass star formation
+                   theories. Near-infrared radiation from source I
+                   escapes through the cavity opened by the OMC1 outflow
+                   and is scattered by dust towards our line of sight.
+                   Aims: The reflected spectrum offers a unique
+                   possibility of observing the emission from the
+                   innermost regions of the system and probing the
+                   nature of source I and its immediate surroundings.
+                   Methods: We obtained moderately high
+                   spectral-resolution (lambda/Deltalambda 9000)
+                   observations of the near infrared diffuse emission in
+                   several locations around source I/Orion-KL. We
+                   observed a widespread rich absorption line spectrum
+                   that we compare with cool stellar photospheres and
+                   protostellar accretion disk models. Results: The
+                   spectrum is broadly similar to strongly veiled, cool,
+                   low-gravity stellar photospheres in the range Teff
+                   3500-4500 K, luminosity class I-III. An exact match
+                   explaining all features has not been found, and a
+                   plausible explanation is that a range of different
+                   temperatures contribute to the observed absorption
+                   spectrum. The 1D velocity dispersions implied by the
+                   absorption spectra, sigma 30 km s-1, can be explained
+                   by the emission from a disk around a massive, m_* 10
+                   M_&sun;, protostar that is accreting at a high rate,
+                   dot{m_*} 3 × 10-3 M_&sun; yr-1. Conclusions: Our
+                   observations suggest that the near-infrared
+                   reflection spectrum observed in the Orion-KL region
+                   is produced close to source I and scattered to our
+                   line of sight in the OMC1 outflow cavity. The
+                   spectrum allows us to exclude source I being a very
+                   large, massive protostar rotating at breakup speed.
+                   We suggest that the absorption spectrum is produced
+                   in a disk surrounding a 10 M_&sun; protostar,
+                   accreting from its disk at a high rate of a few ×
+                   10-3 M_&sun;/yr). Based on observations collected at
+                   the European Southern Observatory, Chile. Program
+                   076.C-0660.},
+  doi =           {10.1051/0004-6361/201014497},
+  eid =           {A44},
 }
 
