--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -22,6 +22,11 @@ Molecules consisting of alkali metals and halogens have been detected
 toward evolved stars including IRC +10216 \citep{Cernicharo1987a}, 
 {\color{red}Discussion of AGB*s is now in the discussion session.}
 
+In \citet[][the brine paper]{Ginsburg2018b}, we used lines of
+\water and one or more unknown species to measure the rotation curve of
+the disk around \sourcei.  We have now identified these unknown lines as
+transitions of NaCl and KCl.
+
 \section{Observations}
 The observations presented here are described in \citet{Ginsburg2018a} as part
 of ALMA project 2016.1.00165.S.  We use the robust 0.5 weighted spectral cubes
