add the complete salty table

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -108,6 +108,15 @@ it requires the gas to be below the radiation temperature.  Also, the critical d
 of these transitions is likely to be absurdly high, given their A-values in the 0.1s
 range.}
 
+
+In Table XXX, we report all of the lines that are in our observable band
+and whether or not they were detected.  We employ the following flag scheme:
+`d' for detection `n' for nondetection, `q' for questionable (e.g., low
+signal-to-noise, but possibly detected, or in regions where the noise is
+not Gaussian and may be affected by other lines).
+We additionally include a flag `c' for `confused', which we add to the flag
+string if the line is blended with another brighter line of a different species.
+
 \section{Discussion}
 The lines we have reported have only been seen in a small handful of other sources,
 all of which were moderately high-mass evolved stars blowing off their envelopes.
