--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -28,7 +28,7 @@ the disk around \sourcei.  We have now identified these unknown lines as
 transitions of NaCl and KCl.
 
 \section{Observations}
-The observations presented here are described in \citet{Ginsburg2018a} as part
+The observations presented here are described in \citet{Ginsburg2018b} as part
 of ALMA project 2016.1.00165.S.  We use the robust 0.5 weighted spectral cubes
 from all three bands (B3 3 mm, B6 1 mm, B7 0.85 mm) for the spectral analysis
 presented here.
@@ -80,9 +80,17 @@ Figures 1-3 shows the spectra with all lines labeled.
 
 \section{Results}
 We have clearly identified the carrier of the majority [what number?]
-of unidentified lines in the \citet{Ginsburg2018a} spectra.
+of unidentified lines in the \citet{Ginsburg2018b} spectra.
 The lines have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
 to brightness temperatures 5-20 K.
+
+In Table XXX, we report all of the lines that are in our observable band
+and whether or not they were detected.  We employ the following flag scheme:
+`d' for detection `n' for nondetection, `q' for questionable (e.g., low
+signal-to-noise, but possibly detected, or in regions where the noise is
+not Gaussian and may be affected by other lines).
+We additionally include a flag `c' for `confused', which we add to the flag
+string if the line is blended with another brighter line of a different species.
 
 The low observed brightness temperatures suggest that the emission from
 these lines is optically thin.
@@ -109,13 +117,6 @@ of these transitions is likely to be absurdly high, given their A-values in the 
 range.}
 
 
-In Table XXX, we report all of the lines that are in our observable band
-and whether or not they were detected.  We employ the following flag scheme:
-`d' for detection `n' for nondetection, `q' for questionable (e.g., low
-signal-to-noise, but possibly detected, or in regions where the noise is
-not Gaussian and may be affected by other lines).
-We additionally include a flag `c' for `confused', which we add to the flag
-string if the line is blended with another brighter line of a different species.
 
 \section{Discussion}
 The lines we have reported have only been seen in a small handful of other sources,
