add detection tables

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -84,13 +84,19 @@ of unidentified lines in the \citet{Ginsburg2018b} spectra.
 The lines have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
 to brightness temperatures 5-20 K.
 
-In Table XXX, we report all of the lines that are in our observable band
-and whether or not they were detected.  We employ the following flag scheme:
+In Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}, we report
+all of the lines that are in our observable band and whether or not they were
+detected.  We employ the following
+flag scheme:
 `d' for detection `n' for nondetection, `q' for questionable (e.g., low
 signal-to-noise, but possibly detected, or in regions where the noise is
 not Gaussian and may be affected by other lines).
 We additionally include a flag `c' for `confused', which we add to the flag
 string if the line is blended with another brighter line of a different species.
+
+\input{lines_in_band3.tex}
+\input{lines_in_band6.tex}
+\input{lines_in_band7.tex}
 
 The low observed brightness temperatures suggest that the emission from
 these lines is optically thin.
